fix: Pin Docker image to specific SHA256 for reproducible builds
- Replace kylemanna/bitcoind:latest with specific SHA256 digest
- Use sha256:6f1240b4ac2006ebe0126fb1a5cdc90a14ec1c6a4b174b1abfffa84da2cf3946
- Corresponds to Bitcoin Core v28.1.0 (verified 2025-05-25)
- Add version management documentation section
- Explain benefits of SHA256 pinning over :latest tag
- Include upgrade procedures and security considerations

Benefits:
✅ Reproducible builds across environments
✅ Protection against upstream image changes
✅ Enhanced security and stability
✅ Simplified debugging and troubleshooting

--- a/docker-compose-sync.yml
+++ b/docker-compose-sync.yml
@@ -1,6 +1,6 @@
 services:
   bitcoind:
-    image: kylemanna/bitcoind:latest
+    image: kylemanna/bitcoind@sha256:6f1240b4ac2006ebe0126fb1a5cdc90a14ec1c6a4b174b1abfffa84da2cf3946  # Bitcoin Core v28.1.0
     ports:
       - "8333:8333"  # Porta RPC/P2P do Bitcoin
     volumes:
